--- a/trip-vue/.env
+++ b/trip-vue/.env
@@ -2,4 +2,4 @@
 VITE_KAKAO_OPEN_API_KEY=825ba8eb447bc5dac3843c7ff02c14fa
 
 # API URL settings
-VITE_PJT_API_URL=http://localhost
+VITE_PJT_API_URL=http://70.12.103.104:8080
