--- a/trip-vue/jsconfig.json
+++ b/trip-vue/jsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["vue3-toastify/global"]
   },
   "exclude": ["node_modules", "dist"]
 }
