--- a/trip-vue/package.json
+++ b/trip-vue/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue3-kakao-maps": "^2.3.3",
+    "vue3-toastify": "^0.2.1",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
