[feat] 이미지 업로드 및 게시판 기능 구현

--- a/trip-vue/.env
+++ b/trip-vue/.env
@@ -3,3 +3,10 @@ VITE_KAKAO_OPEN_API_KEY=825ba8eb447bc5dac3843c7ff02c14fa
 
 # API URL settings
 VITE_PJT_API_URL=http://70.12.103.104:8080
+# VITE_PJT_API_URL=http://localhost:8080
+
+VITE_BOARD_MAX_PER_PAGE=8
+VITE_BOARD_MAX_CONTENT_SIZE=1000
+VITE_BOARD_MAX_TITLE_SIZE=30
+
+VITE_MAX_FILE_SIZE=8388608
