--- a/trip-vue/.env
+++ b/trip-vue/.env
@@ -2,8 +2,8 @@
 VITE_KAKAO_OPEN_API_KEY=825ba8eb447bc5dac3843c7ff02c14fa
 
 # API URL settings
-VITE_PJT_API_URL=http://70.12.103.104:8080
-# VITE_PJT_API_URL=http://localhost:8080
+# VITE_PJT_API_URL=http://70.12.103.104:8080
+VITE_PJT_API_URL=http://localhost:8080
 
 # BOARD
 VITE_BOARD_MAX_PER_PAGE=8
